requirements done for 09 prove

--- a/views/pages/result.ejs
+++ b/views/pages/result.ejs
@@ -2,13 +2,15 @@
 <html>
 
 <head>
-
+    <link rel="stylesheet" href="stylesheets/week09.css">
 </head>
 
 <body>
     <div id="result">
-        Your postage rate: $
-        <%= postage %>
+        The postage rate for a
+        <%= mailType %> that weighs
+            <%= weight %> ounces is $
+                <%= postage %>
     </div>
 </body>
 
