--- a/public/stylesheets/week09.css
+++ b/public/stylesheets/week09.css
@@ -1,3 +1,14 @@
+@import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@400;700&display=swap');
+body {
+    font-family: 'Quicksand', sans-serif;
+    width: 80%;
+    margin: auto;
+}
+
+#price {
+    font-weight: bold;
+}
+
 input[type=number],
 select {
     width: 100%;
